update with eclipse plugin